# TrojanSpec-Bench-v1.0

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  FINALIZATION_REPORT.md  HANDOFF.md  LICENSE  MUTDAFNY_COMPARISON.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  verifier-tests.yml
data/: phase10_10a_elicitor_sweep.json  phase10_10b_temperature.json  phase10_10c_monitor_count.json  phase10_10d_ensemble_grid.json  phase10_10e_cross_language.json  phase10_10f_ssc_results.jsonl  phase10_10f_ssc_summary.json  phase10_10g_adaptive.json  phase10_10g_adaptive.jsonl  phase10_10h_beat_ssc.json  phase10_10i_atomic.json  phase10_10i_atomic_results.jsonl  phase10_ablations.json  phase11_results.jsonl  phase11_summary.json  phase14_h2h_summary.json  phase14_mutdafny_honest_results.jsonl  phase14_mutdafny_honest_summary.json  phase14_mutdafny_trojan_results.jsonl  phase14_mutdafny_trojan_summary.json  phase7_admission_report.json  phase9_metrics.json  phase9_metrics_v2.json  phase9_results.jsonl  phase9_results_v2.jsonl  sanity_v2b_report.json  sanity_v3_report.json  sanity_v4_report.json
data/triples/: phase5a_SUMMARY.json
data/triples_xfamily/: phase5b_SUMMARY.json
docs/: REPRODUCIBILITY.md  data_card.md  disclosure_policy.md  hf_dataset_card.md  mutdafny_comparison.md  phase10_ablations.md  phase10i_atomic_monitor.md  phase11_mathlib_case_study.md  phase5_to_phase8_complete.md  phase9_detector_evaluation.md  schema.md  threat_model.md
docs/templates/: disclosure_email.txt
hf_space_build/: README.md  app.py  examples.json  requirements.txt
scripts/: 01_fetch_source_benchmarks.sh  02_generate_triples.py  03_review_triples.py  04_validate_witnesses.py  05_specguard.py  06_phase9_eval.py  10a_elicitor_sweep.py  10b_monitor_temperature.py  10c_monitor_count.py  10d_ensemble_grid.py  10e_cross_language.py  10f_ssc_baseline.py  10g_adaptive_attack.py  10h_beat_ssc.py  10i_atomic_monitor.py  11_mathlib_case_study.py  13_hf_dataset_release.py  14_mutdafny_batch.py  14_mutdafny_compare.py  14_mutdafny_extract_pairs.py  _diag_implleak.py  _phase10_report.py  _phase11_report.py  _phase5_summary.py  _phase9_axiom_replay.py  _phase9_report.py  _phase_final_report.py  _val_implleak_shapes.py  _val_lean_fewshot.py  _val_lean_leak_repair.py  install_mutdafny.sh  install_verifiers.sh  reproduce.sh  run_phase10_phase11.sh  run_phase14.sh  run_phase5.sh  run_phase9.sh  run_phaseA2.sh  run_phaseA3.sh  run_phaseA4.sh
tests/: conftest.py  test_json_extract.py  test_schemas.py  test_wilson_ci.py
(+116 files in other folders)
