[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trojanspec"
version = "0.4.0"
description = "TrojanSpec-Bench: an adversarial-specification-elicitation benchmark for AI-assisted formal verification (Dafny, Lean 4, Verus)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mohammad Zeeshan", email = "hdglit@inf.elte.hu" }]
maintainers = [{ name = "Mohammad Zeeshan", email = "hdglit@inf.elte.hu" }]
keywords = [
    "formal-verification",
    "ai-safety",
    "specification",
    "dafny",
    "lean4",
    "verus",
    "benchmark",
    "adversarial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8", "seaborn>=0.13", "jupyterlab>=4.0"]
hf = ["datasets>=2.18", "huggingface-hub>=0.22"]
review = ["streamlit>=1.33"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://github.com/m-zest/trojanspec-bench"
Repository = "https://github.com/m-zest/trojanspec-bench"
Dataset = "https://huggingface.co/datasets/m-zest/trojanspec-bench"

[project.scripts]
trojanspec = "trojanspec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trojanspec = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "verifier: tests that require Dafny/Lean/Verus to be installed",
    "network: tests that require a live LLM endpoint",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]
